--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## 源码: https://github.com/hexojs/hexo/
 
 # 站点设置
-title: Time's Blog # 站点标题
-subtitle: '' # 站点副标题
-description: '' # 站点描述
-keywords: # 关键词
+title: Time's Domain # 站点标题
+subtitle: '时域' # 站点副标题
+description: '欢迎来到 时域, 这里是Time的博客, 平常会分享一些心得，以及一些代码' # 站点描述
+keywords: 编程,linux,python,Code,时域,Time's Domain,Time's Blog,博客,hexo,Time的博客,工藤,# 关键词
 author: Time # 作者名
 language: zh-CN # 语言
 timezone: 'Asia/Shanghai' # 时区
@@ -22,7 +22,7 @@ pretty_urls: # 美化URL的设置
 abbrlink:
   alg: crc32  #算法: crc16(default) and crc32
   rep: hex    #进制: dec(default) and hex
-  
+
 # 目录设置
 source_dir: source # 源文件目录
 public_dir: public # 生成的静态文件目录
