--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,17 +29,18 @@ jobs:
 
       - name: Generate static files
         run: npx hexo generate
-        
+
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+      
       - name: Configure Git
         run: |
           git config --global user.name "User-Time" # 在这里填写你的 GitHub 用户名
           git config --global user.email "time_player@outlook.com" # 在这里填写你的 GitHub 邮箱
-      # - name: Setup SSH
-      #   run: |
-      #     mkdir -p ~/.ssh
-      #     echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_rsa
-      #     chmod 600 ~/.ssh/id_rsa
-      #     ssh-keyscan github.com >> ~/.ssh/known_hosts
-
+      
       - name: Deploy to GitHub Pages
         run: npx hexo deploy
