--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
         run: |
           git config --global user.name "User-Time" # 在这里填写你的 GitHub 用户名
           git config --global user.email "time_player@outlook.com" # 在这里填写你的 GitHub 邮箱
-      
+      - name: Setup SSH
+        run: ssh -T git@github.com
+        
       - name: Install dependencies
         run: npm install
       
@@ -44,6 +46,6 @@ jobs:
       - name: Generate static files
         run: npx hexo generate
 
-
+      
       - name: Deploy to GitHub Pages
         run: npx hexo deploy
