--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
           echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           
-      - name: Configure Git
-        run: |
-          git config --global user.name "User-Time" # 在这里填写你的 GitHub 用户名
-          git config --global user.email "time_player@outlook.com" # 在这里填写你的 GitHub 邮箱
+      # - name: Configure Git
+      #   run: |
+      #     git config --global user.name "User-Time" # 在这里填写你的 GitHub 用户名
+      #     git config --global user.email "time_player@outlook.com" # 在这里填写你的 GitHub 邮箱
       - name: Setup SSH
         run: ssh -T git@github.com
         
